--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,31 +1,21 @@
-<!-- Main container -->
-<nav class="navbar">
-  <!-- Left side -->
-
-  <div class="navbar-left">
-    <div class="navbar-item">
-      <p class="subtitle is-5">
-        <strong>Find</strong> Mentors
-      </p>
+<nav class="navbar navbar-light" style="background-color: #e3f2fd;">
+  <div class="container">
+    <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar2">
+      &#9776;
+    </button>
+    <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2">
+      <ul class="nav navbar-nav">
+          <li class="nav-item">
+            <% if user_signed_in? %>
+              <%= link_to "Sign out", destroy_user_session_path, method: :delete, class: "btn btn-success" %>
+            <% else %>
+              <%= link_to "Sign up", new_user_registration_path, class: "btn btn-success" %>
+           <% end %> 
+          </li>
+      <form class="form-inline pull-xs-right">
+        <input class="form-control" type="text" placeholder="Find a Mentor">
+        <button class="btn btn-success-outline" type="submit">Search</button>
+      </form>
     </div>
-    <div class="navbar-item">
-      <p class="control is-grouped">
-        <input class="input" type="text" placeholder="Look now!">
-        <button class="button">
-          Search
-        </button>
-      </p>
-    </div>
-  </div>
-
-  <!-- Right side -->
-  <div class="navbar-right">
-      <p class="control">
-        <% if user_signed_in? %>
-          <%= link_to "Sign out", destroy_user_session_path, method: :delete, class: "button is-success" %>
-        <% else %>
-          <%= link_to "Sign in", new_user_session_path, class: "button is-success" %>
-       <% end %> 
-      </p>
   </div>
 </nav>
